vertical text and scrollbar fix

--- a/parts.css
+++ b/parts.css
@@ -4,28 +4,19 @@ body.parts .content {
    background-image: url('109392.jpg');
    background-size: 100% 100%;
    background-repeat: no-repeat;
-   padding-top: 30px;
-   padding-bottom: 20px;
 }
 
-
-.column-layout {
-   width: 100%;
-   height: 100%;
-   display: flex;
-   flex-direction: column;
-   row-gap: 30px;
-   column-gap: 30px;
-   flex-wrap: wrap;
-   align-items: center;
-
-}
 
 body.parts .header {
-   width: 40%;
+   text-align: center;   
 }
 
-.header .parts-header {
+
+
+.header .parts-header {   
+   margin-left: 25%;
+   margin-right: 25%;
+   width: 50%;
    font-family    : Helvetica, sans-serif;
    font-variant   : normal;
    font-style     : normal;
@@ -44,7 +35,7 @@ body.parts .header {
 }
 
 .text-block {
-   width: 40%;
+   width: 60%;
    font-family    : Helvetica, sans-serif;
    font-variant   : normal;
    font-style     : normal;
