--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,31 @@ body {
    background-color: #302f2f;
 }
 
+.page-layout {
+   display: flex;
+   flex-direction: column;
+   height: 100%;
+   width: 100%;
+}
+
+.page-layout .content {
+   flex: 1;  
+   /* overflow: hidden; allow flex to fill available space and  no more  */
+}
+
 .column-layout {
    width: 100%;
-   height: 100%;
    display: flex;
    flex-direction: column;
    row-gap: 40px;
    column-gap: 30px;
-   flex-wrap: wrap;
    align-items: center;
+}
 
+.scroll-container {
+   height: 100%;
+   width: 100%;
+   overflow: auto;
 }
 
 .header .text .glow {
@@ -32,12 +47,9 @@ body {
 }
 
 .navbar {
-   height: 50px;
+   flex: none;
 }
 
-.content {
-   height: calc(100% - 50px);
-}
 
 .navbar ul {
    list-style-type : none;
@@ -45,17 +57,15 @@ body {
    padding         : 0;
    overflow        : hidden;
    background-color: #333;
-   font-family     : 'Open Sans', 'Helvetica Neue', sans-serif;
-   font-weight     : 300;
-   position        : fixed;
-   top             : 0;
+   /* using Open Sans so we need to add a preload for thant font to stop resizing as the font loads */
+    font-family     : 'Open Sans', 'Helvetica Neue', sans-serif;  
+   font-weight     : 400;
+    font-size: 21px;  
    width           : 100%;
 }
 
 .navbar li {
    float: left;
-   font-size: 21px;
-   font-weight: 400;
 }
 
 .navbar li a {
